--- a/search_engine.ipynb
+++ b/search_engine.ipynb
@@ -1662,12 +1662,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "def find_matching_positions(queries, positional_index):\n",
-    "    \n",
     "    final_result = []\n",
     "    for query in queries:\n",
     "        term_lists = [[] for _ in range(10)]\n",
@@ -1694,7 +1693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1704,7 +1703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1715,7 +1714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1724,7 +1723,7 @@
        "{'1'}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1735,7 +1734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1744,7 +1743,7 @@
        "[['1', '2'], ['1', '3', '4', '5']]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1755,38 +1754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def find_matching_positions(queries, positional_index):\n",
-    "    final_result = []\n",
-    "    for query in queries:\n",
-    "        term_lists = [[] for _ in range(10)]\n",
-    "        _, query_terms = tokenize_and_stem(query)\n",
-    "        if query_terms:\n",
-    "            for term in query_terms:\n",
-    "                if term not in positional_index:\n",
-    "                    return False\n",
-    "                else:\n",
-    "                    for key, positions in positional_index[term][1].items():\n",
-    "                        term_lists[key - 1].extend(positions)\n",
-    "\n",
-    "            matching_positions = [\n",
-    "                f\"{pos}\"\n",
-    "                for pos, positions in enumerate(term_lists, start=1)\n",
-    "                if len(positions) == len(query_terms)\n",
-    "            ]\n",
-    "\n",
-    "            final_result.append(matching_positions)\n",
-    "        else:\n",
-    "            return False\n",
-    "    return final_result\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1805,7 +1773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1824,23 +1792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def complement_boolean_query(query_set):\n",
-    "    full_set = set([\"1\", \"2\", \"3\", \"4\", \"5\", \"6\", \"7\", \"8\", \"9\", \"10\"])\n",
-    "    if not query_set:\n",
-    "        print(\"No query set provided.\")\n",
-    "        return list(full_set)\n",
-    "\n",
-    "    complement_set = full_set.difference(query_set)\n",
-    "    return list(complement_set)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1861,7 +1813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1889,7 +1841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1928,14 +1880,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 42,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "def complement_boolean_query(first_list, second_list):\n",
+    "    full_set = set([\"1\", \"2\", \"3\", \"4\", \"5\", \"6\", \"7\", \"8\", \"9\", \"10\"])\n",
+    "    \n",
+    "    if not first_list:\n",
+    "        raise(\"No first list provided.\")\n",
+    "\n",
+    "    if not second_list:\n",
+    "        raise(\"No second list provided.\")\n",
+    "\n",
+    "    first_set = set(first_list)\n",
+    "    second_set = set(second_list)\n",
+    "\n",
+    "    complement_set = first_set.difference(second_set)\n",
+    "    return list(complement_set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "In the Phrase Query stage Search for: antony brutus\n",
+      "In the Phrase Query stage Search for: antony not brutus\n",
+      "[['1', '2', '6'], ['1', '2', '4']]\n",
       "\n",
       "Vector Space Model for Query:\n",
       "        tf  w_tf       idf    tf_idf  normalized\n",
@@ -1944,20 +1921,18 @@
       "\n",
       "\n",
       "Product Sum:\n",
-      "doc_1    0.538393\n",
-      "doc_2    0.577877\n",
+      "doc_6    0.548343\n",
       "dtype: float64\n",
       "\n",
       "\n",
       "Product (query * matched doc):\n",
-      "           doc_1     doc_2\n",
-      "antony  0.269196  0.288939\n",
-      "brutus  0.269196  0.288939\n",
+      "           doc_6\n",
+      "antony  0.548343\n",
+      "brutus  0.000000\n",
       "\n",
       "\n",
       "Similarity:\n",
-      "doc_1    0.538393\n",
-      "doc_2    0.577877\n",
+      "doc_6    0.548343\n",
       "dtype: float64\n",
       "\n",
       "\n",
@@ -1967,57 +1942,7 @@
       "\n",
       "\n",
       "Related Docs:\n",
-      "doc_1, doc_2\n",
-      "If you want to EXIT enter q/Q: antony or to\n",
-      "In the Phrase Query stage Search for: antony or to\n",
-      "\n",
-      "Vector Space Model for Query:\n",
-      "        tf  w_tf       idf    tf_idf  normalized\n",
-      "antony   1   1.0  0.522879  0.522879    0.795757\n",
-      "to       1   1.0  0.397940  0.397940    0.605616\n",
-      "\n",
-      "\n",
-      "Product Sum:\n",
-      "doc_8     0.196976\n",
-      "doc_2     0.325163\n",
-      "doc_10    0.217874\n",
-      "doc_6     0.617089\n",
-      "doc_1     0.302946\n",
-      "doc_7     0.196976\n",
-      "doc_9     0.217874\n",
-      "dtype: float64\n",
-      "\n",
-      "\n",
-      "Product (query * matched doc):\n",
-      "           doc_8     doc_2    doc_10     doc_6     doc_1     doc_7     doc_9\n",
-      "antony  0.000000  0.325163  0.000000  0.617089  0.302946  0.000000  0.000000\n",
-      "to      0.196976  0.000000  0.217874  0.000000  0.000000  0.196976  0.217874\n",
-      "\n",
-      "\n",
-      "Similarity:\n",
-      "doc_8     0.196976\n",
-      "doc_2     0.325163\n",
-      "doc_10    0.217874\n",
-      "doc_6     0.617089\n",
-      "doc_1     0.302946\n",
-      "doc_7     0.196976\n",
-      "doc_9     0.217874\n",
-      "dtype: float64\n",
-      "\n",
-      "\n",
-      "Query Length:\n",
-      "0.6570832768894986\n",
-      "\n",
-      "\n",
-      "\n",
-      "Related Docs:\n",
-      "doc_8, doc_2, doc_10, doc_6, doc_1, doc_7, doc_9\n",
-      "If you want to EXIT enter q/Q: f\n",
-      "In the Phrase Query stage Search for: antony and to\n",
-      "No such query found in the database:['antony', 'to']\n",
-      "Try Again.\n",
-      "\n",
-      "If you want to EXIT enter q/Q: q\n"
+      "doc_6\n"
      ]
     }
    ],
@@ -2043,11 +1968,15 @@
     "            returned_docs = \"doc_\" + \", doc_\".join(returned_docs)\n",
     "            query = \" \".join(query)\n",
     "            build_output_content(query, returned_docs)\n",
-    "    elif boolean_operator == \"not \":\n",
+    "    elif boolean_operator == \"not\":\n",
     "        query = query.split(\" not \")\n",
     "        returned_matches_doc = find_matching_positions(query, positional_index)\n",
-    "        returned_docs = complement_boolean_query(returned_matches_doc)\n",
-    "        print(returned_docs)\n",
+    "        print(returned_matches_doc)\n",
+    "        returned_docs = complement_boolean_query(returned_matches_doc[0], returned_matches_doc[1])\n",
+    "        returned_docs = \"doc_\" + \", doc_\".join(returned_docs)\n",
+    "        query = \" \".join(query)\n",
+    "        build_output_content(query, returned_docs)\n",
+    "\n",
     "    else:\n",
     "        returned_matches_doc = phrase_query_serach(query, positional_index)\n",
     "        if returned_matches_doc:\n",
